Fixed Spacing on blocks

--- a/style.css
+++ b/style.css
@@ -33,10 +33,10 @@ h4{
 	background-color: white;
 }
 .block{
-	margin: 10px auto;
+	margin: 10px auto 50px auto;
 	padding: 0 10px 10px 10px;
 	max-width: 1000px;
-	border-left: 1px solid gray;
+	border-left: 2px solid #A41034;
 }
 /*HEADER & NAV STYLES*/
 header{
@@ -60,6 +60,10 @@ header{
 	color: black;
 	text-decoration: none;
 	font-size: 1.4em;
+	transition: .3s;
+}
+.navbar a:hover{
+	color: navy;
 }
 /*TITLE STYLES*/
 .titleblock{
@@ -93,6 +97,8 @@ p .emphasis{
 .sidenote{
 	text-align: right;
 	font-weight: 300;
+	padding: 0;
+	margin: 0;
 }
 .light{
 	font-weight: 300;
